[metadata]
name = gegravity-username
version = 0.1
author = Peter R. Herman
author_email = peter.r.herman+gegravity@gmail.com
description = General equilibrium (GE) gravity modeling tools for international trade
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/peter-herman/gegravity
project_urls =
    Bug Tracker = https://github.com/peter-herman/gegravity/issues
    Documentation = https://peter-herman.github.io/gegravity/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = gegravity
packages = find:
python_requires = >=3.7

[options.packages.find]
where = gegravity